fixed spacing on history page

--- a/css/main.css
+++ b/css/main.css
@@ -39,8 +39,5 @@ h3 {
   text-align: left;
 }
 
-/* #histGroup2 { */
-  background-color: white;
-  color: black;
-}
+
 
